Update Python script paths in release workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -83,13 +83,13 @@ jobs:
         run: |
           mkdir -p output
           # 合并标准版
-          python run.py -b ./TTF/pragma-sevka-mono-normalregularupright.ttf \
+          python tools/run.py -b ./TTF/pragma-sevka-mono-normalregularupright.ttf \
             -z ./LXGWWenKaiMono-Regular.ttf ./LXGWWenKaiMonoLite-Regular.ttf \
             -f "${{ env.FAMILY }}" -s "Regular" -o "output/${{ env.FAMILY_NAME }}-Regular.ttf" \
             -w 500 525 1000 1025 -x 525 -l 50 -t 50 -a 1050 --hint
           
           # 合并 NF 版
-          python run.py -b ./PragmaSevkaMonoNerdFontMono-Regular.ttf \
+          python tools/run.py -b ./PragmaSevkaMonoNerdFontMono-Regular.ttf \
             -z ./LXGWWenKaiMono-Regular.ttf ./LXGWWenKaiMonoLite-Regular.ttf \
             -f "${{ env.FAMILY_NF }}" -s "Regular" -o "output/${{ env.FAMILY_NF_NAME }}-Regular.ttf" \
             -w 500 525 1000 1025 -x 525 -l 50 -t 50 -a 1050 --hint
